--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -28,4 +28,13 @@
   .home-button:hover {
     background-color: #b51d1d;
   }
+  /* .app {
+    background-color: #ffffff;
+    color: #000000;
+  }
   
+  .app.dark-mode {
+    background-color: #121212;
+    color: #ffffff;
+  }
+   */
